update default class names | add hook_preprocess | template favicons | aria menu

--- a/templates/base/footer.html.twig
+++ b/templates/base/footer.html.twig
@@ -7,11 +7,11 @@
 #}
 
 {% if page.footer %}
-  <footer id="footer" role="contentinfo" class="footer u-background-color--charcoal u-cf">
-    <div class="footer-content l-container--md u-justify--space-between u-position--relative">
+  <footer id="footer" role="contentinfo" class="footer">
+    <div class="footer-content">
 	    {{ page.footer }}
       <div class="footer__copyright">
-          <p class="u-color--white">© {{ 'now'|date('Y') }} Basestart</p>
+          <p class="copyright-text">© {{ 'now'|date('Y') }} Basestart</p>
       </div>
   	</div>
   </footer>
