--- a/templates/base/html.html.twig
+++ b/templates/base/html.html.twig
@@ -30,27 +30,10 @@
 
   <head-placeholder token="{{ placeholder_token|raw }}">
   <title>{{ head_title|safe_join(' | ') }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"/>
 
-  <link rel="apple-touch-icon" sizes="57x57" href="/{{ theme_path }}/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/{{ theme_path }}/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/{{ theme_path }}/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/{{ theme_path }}/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/{{ theme_path }}/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/{{ theme_path }}/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/{{ theme_path }}/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/{{ theme_path }}/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/{{ theme_path }}/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/{{ theme_path }}/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/{{ theme_path }}/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/{{ theme_path }}/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/{{ theme_path }}/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" href="/{{ theme_path }}/favicons/favicon.ico">
-  <link rel="manifest" href="/{{ theme_path }}/favicons/manifest.json">
-  <meta name="msapplication-config" content="/{{ theme_path }}/favicons/browserconfig.xml">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/{{ theme_path }}/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  {# Favicon #}
+  {% include directory ~ '/templates/includes/base/inc--favicons.html.twig' %}
 
   <css-placeholder token="{{ placeholder_token|raw }}">
   <js-placeholder token="{{ placeholder_token|raw }}">
