--- a/templates/breadcrumbs/breadcrumb--dropdown-menu.html.twig
+++ b/templates/breadcrumbs/breadcrumb--dropdown-menu.html.twig
@@ -13,7 +13,7 @@
 
 {% if page.breadcrumb %}
   <div id="breadcrumb-container-basic">
-    <div id="breadcrumb" class="breadcrumb u-padding--half--top u-padding--half--bottom u-space--bottom l-container--md">
+    <div id="breadcrumb" class="breadcrumb">
       {{ page.breadcrumb }}
     </div>
   </div>
