--- a/templates/highlighted/highlighted.html.twig
+++ b/templates/highlighted/highlighted.html.twig
@@ -12,7 +12,7 @@
 
 
 {% if page.highlighted %}
-  <div id="highlighted" class="highlighted l-container--md">
+  <div id="highlighted" class="highlighted">
     {{ page.highlighted }}
   </div>
 {% endif %}
