--- a/templates/pages/page-title.html.twig
+++ b/templates/pages/page-title.html.twig
@@ -14,6 +14,6 @@
 #}
 {{ title_prefix }}
 {% if title %}
-  <h1 class="u-font--bold u-space--and-half--bottom">{{ title }}</h1>
+  <h1>{{ title }}</h1>
 {% endif %}
 {{ title_suffix }}
